@@ -16,6 +16,10 @@ committal in the CVS repository !
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
 
+3rd August 2000  Gabriele Cosmo (op-V02-00-00r)
+- G4OpBoundaryProcess.cc: changed RandGauss to G4RandGauss to fix problem
+  of events' reproducibility.
+
 21th October 1999  Peter Gumplinger (op-V00-01-01)
 - G4OpBoundaryProcess.hh and G4OpBoundaryProcess.cc have been modified
   (Fill NewMomentum/NewPolarization in DoAbsorption. These members need
